--- a/index.html
+++ b/index.html
@@ -4,9 +4,66 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Expertise</title>
 </head>
 <body>
-    
+
+    <section id="main-wrapper">
+        <div class="card">
+            <div class="icon-container">
+
+            </div>
+            <div class="text-container">
+                <h1 class="card-title">
+                </h1>
+                <p class="main-text">
+
+                </p>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="icon-container">
+
+            </div>
+            <div class="text-container">
+                <h1 class="card-title">
+                </h1>
+                <p class="main-text">
+
+                </p>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="icon-container">
+
+            </div>
+            <div class="text-container">
+                <h1 class="card-title">
+                </h1>
+                <p class="main-text">
+
+                </p>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="icon-container">
+
+            </div>
+            <div class="text-container">
+                <h1 class="card-title">
+                </h1>
+                <p class="main-text">
+
+                </p>
+            </div>
+        </div>
+       
+    </section>
+
+
+    <script src="https://kit.fontawesome.com/d230802154.js" crossorigin="anonymous"></script>
 </body>
 </html>
