Style and centre icons

--- a/index.html
+++ b/index.html
@@ -5,19 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Expertise</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <section id="main-wrapper">
         <div class="card">
             <div class="icon-container">
-
+                <i class="fa-solid fa-compass-drafting" class="icon"></i>
             </div>
             <div class="text-container">
                 <h1 class="card-title">
+                    UI/UX Design
                 </h1>
                 <p class="main-text">
-
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
                 </p>
             </div>
         </div>
@@ -60,7 +63,7 @@
                 </p>
             </div>
         </div>
-       
+
     </section>
 
 
