--- a/index.html
+++ b/index.html
@@ -27,39 +27,45 @@
 
         <div class="card">
             <div class="icon-container">
-
+                <i class="fa-solid fa-compass-drafting" class="icon"></i>
             </div>
             <div class="text-container">
                 <h1 class="card-title">
+                    Brand Discovery
                 </h1>
                 <p class="main-text">
-
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
                 </p>
             </div>
         </div>
 
         <div class="card">
             <div class="icon-container">
-
+                <i class="fa-solid fa-compass-drafting" class="icon"></i>
             </div>
             <div class="text-container">
                 <h1 class="card-title">
+                    SEO Marketing
                 </h1>
                 <p class="main-text">
-
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
                 </p>
             </div>
         </div>
 
         <div class="card">
             <div class="icon-container">
-
+                <i class="fa-solid fa-compass-drafting" class="icon"></i>
             </div>
             <div class="text-container">
                 <h1 class="card-title">
+                    Logo Design
                 </h1>
                 <p class="main-text">
-
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
                 </p>
             </div>
         </div>
