--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <div class="card">
             <div class="icon-container">
-                <i class="fa-solid fa-compass-drafting" class="icon"></i>
+                <i class="fa-brands fa-searchengin" class="icon"></i>
             </div>
             <div class="text-container">
                 <h1 class="card-title">
@@ -42,7 +42,7 @@
 
         <div class="card">
             <div class="icon-container">
-                <i class="fa-solid fa-compass-drafting" class="icon"></i>
+                <i class="fa-solid fa-rocket" class="icon"></i>
             </div>
             <div class="text-container">
                 <h1 class="card-title">
@@ -57,7 +57,7 @@
 
         <div class="card">
             <div class="icon-container">
-                <i class="fa-solid fa-compass-drafting" class="icon"></i>
+                <i class="fa-solid fa-palette" class="icon"></i>
             </div>
             <div class="text-container">
                 <h1 class="card-title">
