Add semi-circle hover effect on first card

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 
     <section id="main-wrapper">
         <div class="card">
+            <span>
+                <svg width="218" height="109" viewBox="0 0 218 109" fill="none" xmlns="http://www.w3.org/2000/svg" class="semi-circle" >
+                    <circle opacity="0.05" cx="156.5" cy="-47.5" r="156.5" fill="white"></circle>
+                    <circle opacity="0.08" cx="210" cy="6" r="62" fill="white"></circle>
+                </svg>
+            </span>
             <div class="icon-container">
                 <i class="fa-solid fa-compass-drafting" class="icon"></i>
             </div>
