--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
         </div>
 
         <div class="card">
+            <span>
+                <svg width="218" height="109" viewBox="0 0 218 109" fill="none" xmlns="http://www.w3.org/2000/svg" class="semi-circle" >
+                    <circle opacity="0.05" cx="156.5" cy="-47.5" r="156.5" fill="white"></circle>
+                    <circle opacity="0.08" cx="210" cy="6" r="62" fill="white"></circle>
+                </svg>
+            </span>
             <div class="icon-container">
                 <i class="fa-brands fa-searchengin" class="icon"></i>
             </div>
@@ -47,6 +53,12 @@
         </div>
 
         <div class="card">
+            <span>
+                <svg width="218" height="109" viewBox="0 0 218 109" fill="none" xmlns="http://www.w3.org/2000/svg" class="semi-circle" >
+                    <circle opacity="0.05" cx="156.5" cy="-47.5" r="156.5" fill="white"></circle>
+                    <circle opacity="0.08" cx="210" cy="6" r="62" fill="white"></circle>
+                </svg>
+            </span>
             <div class="icon-container">
                 <i class="fa-solid fa-rocket" class="icon"></i>
             </div>
@@ -62,6 +74,12 @@
         </div>
 
         <div class="card">
+            <span>
+                <svg width="218" height="109" viewBox="0 0 218 109" fill="none" xmlns="http://www.w3.org/2000/svg" class="semi-circle" >
+                    <circle opacity="0.05" cx="156.5" cy="-47.5" r="156.5" fill="white"></circle>
+                    <circle opacity="0.08" cx="210" cy="6" r="62" fill="white"></circle>
+                </svg>
+            </span>
             <div class="icon-container">
                 <i class="fa-solid fa-palette" class="icon"></i>
             </div>
